# Intelligent-Reliability-Aware-Orchestrator

./: .dockerignore  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  FAQ.md  Makefile  README.md  go.mod  pyproject.toml
.github/workflows/: ci.yml  gitops-demo.yml
artifacts/v10b/: ablation_results.json  policy_artifact.json
artifacts/v11_no_forecast/: policy_artifact.json
artifacts/v8/: ablation_results.json  policy_artifact.json
artifacts/v8_no_forecast/: policy_artifact.json
charts/controller/: Chart.yaml  values.yaml
charts/controller/crds/: orchestratedrollout-crd.yaml
charts/controller/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  rbac.yaml
charts/ml-workload/: Chart.yaml  values.yaml
charts/ml-workload/templates/: NOTES.txt  _helpers.tpl  hpa.yaml  (+3 more)
charts/monitoring/: Chart.yaml  values.yaml
charts/portable-workload/: Chart.yaml  values.yaml
charts/workload/: Chart.yaml  values.yaml
controller/: Dockerfile  config.py  episode.py  guardrails.py  main.py  materialiser.py  policy.py  reconciler.py  requirements.txt  snapshot.py  stress.py
demo/: demo-cpu-ingress.yaml  demo-low-risk-mobilenet.yaml  demo-stress-cpu.yaml
demo-dashboard/: Dockerfile  app.py  requirements.txt
demo-dashboard/k8s/: deployment.yaml  kustomization.yaml
demo-dashboard/static/: style.css
demo-dashboard/templates/: index.html
evaluation/: analyse.py  audit_v12_holdout_stats.py  build_balanced_matrix.py  build_v12_holdout_topup.py  compare_modes.py  final_statistics.py  replay_v12_contextual.py  requirements.txt  summarise_comparison_metrics.py  summarise_trial.py  visualise.py
experiments/: baseline-canary.yaml  baseline-prescale.yaml  baseline-rolling.yaml  experiment_config.yaml  ml-orchestrated-rollout.yaml  sample-orchestrated-rollout.yaml
experiments/episodes/: .gitkeep
gitops/applications/: cpu-bound-fastapi.yaml  go-service.yaml  io-latency-node.yaml  mobilenetv2-onnx.yaml  rollout-demo-dashboard.yaml  squeezenet-onnx.yaml  tabular-sklearn.yaml  workloads-root.yaml
k6/: config.js
k6/scenarios/: alibaba_pressure.js  azure_functions_burst.js  ramp.js  spike.js  steady.js  worldcup98_burst.js
k8s/argocd/: applications.yaml
k8s/base/: namespaces.yaml
k8s/chaos/: generic-experiments.yaml  kustomization.yaml  network-latency.yaml  pod-kill.yaml
k8s/controller/: __init__.py  config.py  snapshot.py
kisim/: __init__.py  requirements.txt
kisim/sim/: __init__.py  environment.py  scenarios.py
kisim/training/: __init__.py  evaluate.py  q_learning.py  train.py
ml-workload/: Dockerfile  export_model.py  requirements.txt
ml-workload/app/: main.py
scripts/: 05_setup_policy_artifact.sh  build_summary.py  combine_shard_grids.py  demo_policy_decision.py  demo_rollout_report.py  demo_show_policy_artifact.py  full_experiment_grid.sh  parse_results.py  patch_steady.sh  rebuild_summary.py  run_experiment.sh  trigger_rollout.sh  watchdog.sh
scripts/gcs/: download_min.sh  prune_local.sh  sync.sh
scripts/gitops/: bootstrap_github_actions_secrets.sh  bootstrap_gitlab_ci_variables.sh  build_and_deploy_dashboard.sh  monitor_rollout.sh  update_rollout_config.sh
scripts/gke/: 00_prereqs.sh  01_auth_and_project.sh  02_enable_apis.sh  03_artifact_registry.sh  04_create_cluster.sh  05_get_credentials.sh  06_deploy_prereqs.sh  07_build_and_push_images.sh  08_deploy_system.sh  09_deploy_shards.sh  10_run_grid_shards.sh  11_create_results_bucket.sh  11_run_full_comparison.sh  12_deploy_gitops_apps.sh  13_run_research_smoke_matrix.sh  14_run_targeted_v11_validation.sh  15_run_autoscaling_stress_validation.sh  17_run_missing_trials.sh  18_run_gitops_workload_portability_smoke.sh
tests/controller/: conftest.py  test_config.py  test_episode.py  test_final_actionset.py  test_gitops_chart.py  test_guardrails.py  test_materialiser.py  test_policy.py  test_reconciler.py  test_snapshot.py  test_stress.py
workload/: Dockerfile  main.go
workloads/cpu-bound-fastapi/: main.py
workloads/io-latency-node/: Dockerfile  package.json  server.js
workloads/tabular-sklearn/: Dockerfile  main.py
(+26 files in other folders)
